aws-eks/06-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
